<resources>
    <string name="app_name">MainUIUX</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="kuis">Kuis</string>
    <string name="kelas">Kelas</string>
    <string name="buku">Buku</string>
    <string name="akun">Akun</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="pilih_kuis">Pilih Kuis</string>
    <string name="list_buku">List Buku</string>
    <string name="quotes_akun">Asah skills kamu dan raih nilai terbaik. Jangan takut untuk salah, karena sukses berawal dari kesalahan dan selalu mencoba terus-menerus untuk meraih hasil yang terbaik.</string>
    <string name="kuis_yang_telah_selesai">Kuis yang telah selesai</string>
    <string name="viii">VIII</string>
    <string name="muhammad_althoofandy_suprayogi">Muhammad Althoofandy Suprayogi</string>
    <string name="pilih_pelajaran">Pilih Pelajaran</string>
    <string name="judul_quiz">Judul Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail_kuis">Silahkan Kerjakan Soal dibawah ini</string>
    <string name="title_activity_quiz_detail">QuizDetailActivity</string>
    <string name="pembahasan">Pembahasan</string>
    <string name="pembelajaran">Selamat datang di pembelajaran</string>

    <string name="textWelcomeLogin"><b>Welcome,</b> \nSign in to Continue</string>
    <string name="textWelcomeRegister"><b>Create account,</b> \nSign up to create a new account</string>
    <string name="txtUsername">Username</string>
    <string name="txtPassword">Password</string>
    <string name="txtSignIn">SignIn</string>
    <string name="txtNoAcc"><u>Don\'t have an Account yet?</u></string>
    <string name="usernameEmpty">Username is Empty</string>
    <string name="pass_6_char">Password must be more than 8 Characters</string>
    <string name="str_signin">Sign In</string>
    <string name="txt_Or">Or</string>
    <string name="str_new_acc">Create New Account</string>
    <string name="txtForgotPass"><u>Forgotten Password?</u></string>
    <string name="txtFullname">Full Name</string>
    <string name="txtEmail">Email</string>
    <string name="txtPhone">Phone Number</string>
    <string name="txtClass">Class</string>
    <string name="txtRePassword">Retype Password</string>
    <string name="txtHaveAcc"><u>Already have an account?</u></string>
    <string name="str_signup">Sign Up</string>
    <string name="fullnameEmpty">Full Name is Empty</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="genderEmpty">Gender is Empty</string>
    <string name="txtGender">Gender</string>
    <string name="phoneEmpty">Phone Number is Empty</string>
    <string name="classEmpty">Class is Empty</string>
    <string name="email_required">Email is Required</string>
    <string name="password_required">Password is Required</string>
    <string name="re_password_required">Re Type Password is Required</string>
    <string name="password_not_match">Password does not match</string>
    <string name="create_account">Create Account</string>
    <string name="please_wait">Please Wait</string>
    <string name="registration_success">Registration Success</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="email_not_registered">Email not Registered</string>
    <string name="email_already_registered">Email already Registered</string>
    <string name="username_exist">Username already exists</string>
    <string name="username_doesnt_exists">Username does not exists</string>
    <string name="doesnt_exists">Does not exists!</string>
    <string name="already_exists">already exists</string>
    <string name="email_or_pass_wrong">Email or Password is Wrong</string>
    <string name="str_find">Find</string>
    <string name="str_update">Update</string>
    <string name="textForgotPassPage"><b>Forgot Password,</b></string>
    <string name="textForgotPassPage2">Enter Email</string>
    <string name="textNewPassword"><b>New Password</b></string>
    <string name="textNewPassword2">Enter your new password</string>
    <string name="email_empty">Email is Empty</string>
    <string name="pass_empty">Password is Empty</string>
    <string name="email_not_found">Email not found</string>
    <string name="pass_not_correct">Password is not correct</string>
    <string name="login_failed">Login Failed</string>
    <string name="str_new_password">New Password</string>
    <string name="str_confirm_new_password">Confirm New Password</string>
    <string name="password_updated">Password has been Updated</string>
    <string name="classLength">Length cannot be more than 2 digits</string>
    <string name="number_phone_invalid">Invalid Number Phone</string>
    <string name="check_email">Check folder Spam on your Email</string>
    <string name="str_send_link">Send Link</string>


</resources>