<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtWelcome"
        style="@style/fontWelcome"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/textWelcomeLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_forgot_pass"
        style="@style/normalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/txtForgotPass"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
        app:layout_constraintStart_toStartOf="@+id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    <com.bangkit.eduboxloginregister.customView.BtnSignIn
        android:id="@+id/btnSignIn"
        style="@style/btnCustom"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/inpPassword"
        app:layout_constraintStart_toStartOf="@+id/inpPassword"
        app:layout_constraintTop_toBottomOf="@+id/inpPassword" />

    <LinearLayout
        android:id="@+id/component_or"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/txt_forgot_pass"
        app:layout_constraintStart_toStartOf="@+id/txt_forgot_pass"
        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_pass">

        <View
            android:layout_width="120dp"
            android:layout_height="0.8dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <TextView
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/txt_Or"
            android:textSize="11sp" />

        <View
            android:layout_width="120dp"
            android:layout_height="0.8dp"
            android:layout_gravity="center"
            android:background="@color/white" />
    </LinearLayout>

    <com.bangkit.eduboxloginregister.customView.BtnNewAccount
        android:id="@+id/btnNewAcc"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        style="@style/btnCustom"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="@+id/component_or"
        app:layout_constraintStart_toStartOf="@+id/component_or"
        app:layout_constraintTop_toBottomOf="@+id/component_or"/>

    <com.bangkit.eduboxloginregister.customView.EditTextEmail
        android:id="@+id/inpEmail"
        style="@style/editText"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtWelcome"
        app:layout_constraintStart_toStartOf="@+id/txtWelcome"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

    <com.bangkit.eduboxloginregister.customView.EditTextPassword
        android:id="@+id/inpPassword"
        style="@style/editText"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:hint="@string/txtPassword"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/inpEmail"
        app:layout_constraintStart_toStartOf="@+id/inpEmail"
        app:layout_constraintTop_toBottomOf="@+id/inpEmail"
        app:passwordToggleEnabled="true" />

</androidx.constraintlayout.widget.ConstraintLayout>