<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".ui.RegisterActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtWelcome"
        style="@style/fontWelcome"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/textWelcomeRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.mainuiux.customView.EditTextFullname
        android:id="@+id/inpFullname"
        style="@style/editText"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/txtWelcome"
        app:layout_constraintStart_toStartOf="@+id/txtWelcome"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

    <com.example.mainuiux.customView.EditTextGender
        android:id="@+id/inpGender"
        style="@style/editText"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:inputType="text"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/inpFullname"
        app:layout_constraintStart_toStartOf="@+id/inpFullname"
        app:layout_constraintTop_toBottomOf="@+id/inpFullname"/>

    <com.example.mainuiux.customView.EditTextEmail
        android:id="@+id/inpEmail"
        style="@style/editText"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/inpGender"
        app:layout_constraintStart_toStartOf="@+id/inpGender"
        app:layout_constraintTop_toBottomOf="@+id/inpGender" />

    <com.example.mainuiux.customView.EditTextPhone
        android:id="@+id/inpPhone"
        android:layout_width="280dp"
        android:layout_height="48dp"
        style="@style/editText"
        android:inputType="phone"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/inpEmail"
        app:layout_constraintStart_toStartOf="@+id/inpEmail"
        app:layout_constraintTop_toBottomOf="@+id/inpEmail"/>

    <com.example.mainuiux.customView.EditTextClass
        android:id="@+id/inpClass"
        android:layout_width="280dp"
        android:layout_height="48dp"
        style="@style/editText"
        android:layout_marginTop="8dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/inpPhone"
        app:layout_constraintStart_toStartOf="@+id/inpPhone"
        app:layout_constraintTop_toBottomOf="@+id/inpPhone"/>

    <com.example.mainuiux.customView.EditTextUsername
        android:id="@+id/inpUsername"
        style="@style/editText"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:inputType="text"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/inpClass"
        app:layout_constraintStart_toStartOf="@+id/inpClass"
        app:layout_constraintTop_toBottomOf="@+id/inpClass" />

    <com.example.mainuiux.customView.EditTextPassword
        android:id="@+id/inpPassword"
        style="@style/editText"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:hint="@string/txtPassword"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/inpUsername"
        app:layout_constraintStart_toStartOf="@+id/inpUsername"
        app:layout_constraintTop_toBottomOf="@+id/inpUsername"
        app:passwordToggleEnabled="true" />

    <com.example.mainuiux.customView.EditTextRePassword
        android:id="@+id/inpRePassword"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:hint="@string/txtRePassword"
        style="@style/editText"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/inpPassword"
        app:layout_constraintStart_toStartOf="@+id/inpPassword"
        app:layout_constraintTop_toBottomOf="@+id/inpPassword"
        app:passwordToggleEnabled="true"/>

    <com.example.mainuiux.customView.BtnSignUp
        android:id="@+id/btnSignUp"
        style="@style/btnCustom"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/inpRePassword"
        app:layout_constraintStart_toStartOf="@+id/inpRePassword"
        app:layout_constraintTop_toBottomOf="@+id/inpRePassword" />

    <LinearLayout
        android:id="@+id/component_or"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintStart_toStartOf="@+id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp">

        <View
            android:layout_width="120dp"
            android:layout_height="0.8dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <TextView
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/txt_Or" />

        <View
            android:layout_width="120dp"
            android:layout_height="0.8dp"
            android:layout_gravity="center"
            android:background="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_have_an_account"
        style="@style/normalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtHaveAcc"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/component_or"
        app:layout_constraintStart_toStartOf="@+id/component_or"
        app:layout_constraintTop_toBottomOf="@+id/component_or" />

</androidx.constraintlayout.widget.ConstraintLayout>